force-app/main/default/objects/Field_Mapping_Configuration__c/Field_Mapping_Configuration__c.object-meta.xml
<CustomObject>
    <label>Field Mapping Configuration</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mapping Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>