force-app/main/default/objects/Field_Mapping_Configuration__c/fields/From_Object__c.field-meta.xml
<CustomField>
    <fullName>From_Object__c</fullName>
    <label>From Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>