force-app/main/default/objects/Field_Mapping_Configuration__c/fields/Mapping_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Trigger__c</fullName>
    <label>Mapping Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert Only</fullName>
            </value>
            <value>
                <fullName>Update Only</fullName>
            </value>
            <value>
                <fullName>Insert and Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>