force-app/main/default/objects/Field_Mapping_Configuration__c/fields/To_Object__c.field-meta.xml
<CustomField>
    <fullName>To_Object__c</fullName>
    <label>To Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>