force-app/main/default/objects/Field_Mapping_Configuration__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>From_Object__c &amp; &quot;_&quot; &amp; To_Object__c &amp; &quot;_&quot; &amp; IF(Is_Active__c, &quot;ACTIVE&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>